# homework-c

./: CMakeLists.txt  README.md
src/hw_10_testing/: README.md  hw_10_testingSortList.c  hw_10_testingSortList.h  hw_10_testingSortListMain.c
src/hw_12-1_binary/: CMakeLists.txt  hw_12-1_binary.c
src/hw_12-2_double/: hw_12-2_double.c
src/hw_2-2_incompleteQuotient/: hw_2-2_incompleteQuotient.c
src/hw_3-2_subString/: hw_3-2_subString.c
src/hw_3-3-dop_countZeros/: hw_3-3-dop_countZeros.c
src/hw_3-3_arrayCountZeros/: hw_3-3_arrayCountZeros.c
src/hw_4-1_sort/: c_4-1_sort.c  instruction.md  sort.s
src/hw_5-1_proBrackets/: CMakeLists.txt  README.md  hw_5-1_proBrackets.c  hw_5-1_proBrackets.h  hw_5-1_proBracketsMain.c  instruction.md
src/hw_5-2_sortStation/: CMakeLists.txt  hw_5-2_sortStation.c  hw_5-2_sortStation.h  hw_5-2_sortStationMain.c  instruction.md
src/hw_6-1_sortList/: hw_6-1_sortList.c  hw_6-1_sortList.h  hw_6-1_sortListMain.c
src/hw_6-2_rhyme/: hw_6-2_rhyme.c  hw_6-2_rhyme.h
src/kr/: kr_1-1_sum.c  kr_1-3_palindrom.c
src/kr_2_1_palindrom/: kr_2_1_palindrom.c  kr_2_1_palindrom.h
src/kr_2_2_circle/: kr_2_2_circle.c
src/stack/: CMakeLists.txt  stack.c  stack.h
